msone-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msone-deployment
  labels:
    app: msone
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  minReadySeconds: 60
  selector:
    matchLabels:
      app: msone
  template:
    metadata:
      labels:
        app: msone
    spec:
      containers:
      - name: msone
        image: taufik90/msone:19
        ports:
        - containerPort: 8099
        livenessProbe:
          httpGet:
            path: /api/v1/healthcek/healty
            port: 8099
          failureThreshold: 10
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/v1/healthcek/healty
            port: 8099
          failureThreshold: 10
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 30
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 60"]
