msposyandu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msposyandu
  namespace: sit
  labels:
    app: msposyandu
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  minReadySeconds: 60
  selector:
    matchLabels:
      app: msposyandu
  template:
    metadata:
      labels:
        app: msposyandu
    spec:
      containers:
      - name: msposyandu
        image: taufik90/msposyandu:5
        ports:
        - containerPort: 8099
        livenessProbe:
          httpGet:
            path: /api/v1/healthcek/healty
            port: 8099
          failureThreshold: 10
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/v1/healthcek/healty
            port: 8099
          failureThreshold: 10
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 30
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 60"]
