msone-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msone-service
spec:
  selector:
    app: msone
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 8099
    nodePort: 30004
