msposyandu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msposyandu
  namespace: sit
spec:
  selector:
    app: msposyandu
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8099
    targetPort: 8099
