mesh-gateway-sample-php-info.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mesh-gateway-sample-php-info
  namespace: sit
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - wev.mtfa.my.id
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - wev.mtfa.my.id
      tls:
        mode: SIMPLE
        credentialName: server-tls
