ingress-routes-spinfo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /sample-php-info
  name: ingress-routes-spinfo
  namespace: sit
spec:
  rules:
  - host: sp-info.paiops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-php-info-svc
            port:
              number: 80
  ingressClassName: nginx
