vs-sit-sample-php-info.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-sit-sample-php-info
  namespace: sit
spec:
  hosts:
  - mtfa.my.id
  gateways:
  - sit/mesh-gateway-sample-php-info
  http:
    - match:
        - port: 443  # Specify the port if your service is exposed on 443
          tls:
            mode: SIMPLE  # Use SIMPLE for basic TLS termination
      route:
        - destination:
            host: sample-php-info-svc.sit.svc.cluster.local
            port:
              number: 80
